--- a/v9/views/campgrounds/show.ejs
+++ b/v9/views/campgrounds/show.ejs
@@ -20,10 +20,12 @@
           <p>
             <em>Submitted By: <%= campground.author.username %></em>
           </p>
-          <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-          <form id="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="post">
-            <button class="btn btn-danger">DELETE</button>
-          </form>
+          <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
+            <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+            <form id="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="post">
+              <button class="btn btn-danger">DELETE</button>
+            </form>
+          <% } %>
         </div>
       </div>
       <div class="well">
@@ -39,6 +41,7 @@
               <p>
                 <%= comment.text %>
               </p>
+              <a href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit" class="btn btn-xs btn-warning">Edit</a>
             </div>
           </div>
         <% }); %>
