--- a/v9/views/comments/edit.ejs
+++ b/v9/views/comments/edit.ejs
@@ -1,11 +1,11 @@
 <% include ../partials/header %>
 <div class="container">
   <div class="row">
-    <h1 style="text-align: center">Edit <%= campground.name %></h1>
+    <h1 style="text-align: center">Edit Comment</h1>
     <div style="width: 30%; margin:35px auto">
-      <form action="/campgrounds/<%= campground._id %>/comments" method="post">
+      <form action="/campgrounds/<%= campground_id %>/comments/<%=comment._id%>?_method=PUT" method="post">
         <div class="form-group">
-          <input class="form-control" type="text" name="comment[text]" placeholder="text">
+          <input class="form-control" type="text" name="comment[text]" value="<%=comment.text%>" placeholder="text">
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-lg btn-default btn-block">Submit</button>
