--- a/v9/views/campgrounds/show.ejs
+++ b/v9/views/campgrounds/show.ejs
@@ -22,7 +22,7 @@
           </p>
           <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
             <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-            <form id="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="post">
+            <form class="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="post">
               <button class="btn btn-danger">DELETE</button>
             </form>
           <% } %>
@@ -42,6 +42,9 @@
                 <%= comment.text %>
               </p>
               <a href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit" class="btn btn-xs btn-warning">Edit</a>
+              <form class="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="post">
+                <input type="submit" class="btn btn-xs btn-danger" value="DELETE">
+              </form>
             </div>
           </div>
         <% }); %>
