--- a/v11/views/campgrounds/new.ejs
+++ b/v11/views/campgrounds/new.ejs
@@ -13,11 +13,11 @@
           <input class="form-control" type="text" name="image" placeholder="Image">
         </div>
         <div class="form-group">
-          <input class="form-control" type="text" name="description" placeholder="description" value="">
+          <input class="form-control" type="text" name="description" placeholder="Description" value="">
         </div>
         <div class="form-group">
-          <label for="location">Location</label>
-          <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+          <!-- <label for="location">Location</label> -->
+          <input class="form-control" type="text" name="location" id="location" placeholder="Location (ex. Yosemite National Park, CA)">
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-lg btn-default btn-block">Submit</button>
