--- a/v11/views/campgrounds/show.ejs
+++ b/v11/views/campgrounds/show.ejs
@@ -19,7 +19,7 @@
           <p>
             <em>Submitted By: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
           </p>
-          <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
+          <% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
             <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
             <form class="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="post">
               <button class="btn btn-danger">DELETE</button>
@@ -40,7 +40,7 @@
               <p>
                 <%= comment.text %>
               </p>
-              <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+              <% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
                 <a href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit" class="btn btn-xs btn-warning">Edit</a>
                 <form class="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="post">
                   <input type="submit" class="btn btn-xs btn-danger" value="DELETE">
