--- a/v11/views/login.ejs
+++ b/v11/views/login.ejs
@@ -15,6 +15,8 @@
             </div>
         </form>
         <a href="/campgrounds">Go Back</a>
+        <br>
+        <a href="/forgot">Forgot password?</a>
     </div>
 </div>
 <%include ./partials/footer %>
