--- a/v11/views/campgrounds/index.ejs
+++ b/v11/views/campgrounds/index.ejs
@@ -6,6 +6,14 @@
       <p>
         <a class="btn btn-primary btn-lrg" href="/campgrounds/new">Add New Campground</a>
       </p>
+      <p>
+        <form class="form-inline" action="/campgrounds" method="GET">
+          <div class="form-group">
+            <input class="form-control" type="text" name="search" placeholder="campground search">
+            <input type="submit" class="btn btn-default" value="Search">
+          </div>
+        </form>
+      </p>
     </div>
   </header>
 
