--- a/v11/views/landing.ejs
+++ b/v11/views/landing.ejs
@@ -24,6 +24,14 @@
     <div id="landing-header">
  		<h1>Welcome to YelpCamp!</h1>
 		<a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
+    <p>
+      <form class="form-inline" action="/campgrounds" method="GET">
+        <div class="form-group">
+          <input class="form-control" type="text" name="search" placeholder="campground search">
+          <input type="submit" class="btn btn-default" value="Search">
+        </div>
+      </form>
+    </p>
     </div>
 
     <ul class="slideshow">
